Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.11.5, 10.6(EOL), 10.11, 11.4, 11.8
-
Can result in unexpected behaviour
-
On big-endian platforms, the interruption of the execution of JSON functions was previously not possible and this is now corrected; on all platforms the interruption of JSON_OVERLAPS now returns the correct error code
Description
While testing https://github.com/MariaDB/server/pull/2448 and doing builds on multiple architectures I noticed that on Launchpad the s390x build fails on:
...
|
main.mysqltest_tracking_info w3 [ pass ] 1
|
main.negation_elimination w1 [ pass ] 5
|
main.nested_profiling w3 [ pass ] 2
|
main.mysql w2 [ pass ] 107941
|
worker[4] Test still running: main.func_json_notembedded
|
worker[4] Test still running: main.func_json_notembedded
|
worker[4] Test still running: main.func_json_notembedded
|
worker[4] Test still running: main.func_json_notembedded
|
worker[4] Test still running: main.func_json_notembedded
|
worker[4] Trying to dump core for [mysqltest - pid: 41359, winpid: 41359]
|
worker[4] Trying to dump core for [mysqld.1 - pid: 40608, winpid: 40608]
|
main.func_json_notembedded w4 [ fail ] timeout after 7200 seconds
|
Test ended at 2023-01-30 04:10:27
|
|
|
Test case timeout after 7200 seconds
|
|
|
== /<<PKGBUILDDIR>>/builddir/mysql-test/var/4/log/func_json_notembedded.log ==
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
1234567,
|
2345678
|
]
|
select json_loose(@arr);
|
json_loose(@arr)
|
[1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567,
|
...
|
1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 1234567, 2345678]
|
select json_merge_patch(@obj, @obj);
|
|
|
== /<<PKGBUILDDIR>>/builddir/mysql-test/var/4/tmp/analyze-timeout-mysqld.1.err ==
|
mysqltest: Could not open connection 'default' after 500 attempts: 2002 Can't connect to local server through socket '/<<PKGBUILDDIR>>/builddir/mysql-test/var/tm' (111)
|
|
|
|
|
- saving '/<<PKGBUILDDIR>>/builddir/mysql-test/var/4/log/main.func_json_notembedded/' to '/<<PKGBUILDDIR>>/builddir/mysql-test/var/log/main.func_json_notembedded/'
|
|
|
Test main.func_json_notembedded has failed 2 times, no more retries!
|
|
|
***Warnings generated in error logs during shutdown after running tests: main.func_json_notembedded
|
|
|
Attempting backtrace. You can use the following information to find out
|
...
|
Completed: Failed 2/1030 tests, 99.81% were successful.
|
|
|
Failing test(s): main.func_json_notembedded
|
|
|
The log files in var/log may give you some hint of what went wrong.
|
|
|
If you want to report this error, please read first the documentation
|
at http://dev.mysql.com/doc/mysql/en/mysql-test-suite.html
|
|
|
Errors/warnings were found in logfiles during server shutdown after running the
|
following sequence(s) of tests:
|
main.fulltext_distinct main.fulltext2 main.func_json_notembedded main.fulltext_derived_4257 main.func_digest main.func_if main.fulltext_derived_4316 main.func_json main.func_int main.func_bit main.func_in main.fulltext_multi main.frm_bad_row_type-7333 main.func_date_add main.fulltext_var main.fulltext3 main.flush_table main.func_isnull main.func_concat main.fulltext main.flush_ssl main.fulltext_update main.func_crypt main.func_encrypt_nossl main.func_default main.func_encrypt_ucs2 main.func_equal main.fulltext_cache main.fulltext_charsets main.fulltext_left_join main.func_des_encrypt main.func_group main.fulltext_order_by main.func_hybrid_type main.func_extract main.func_compress
|
main.func_json_notembedded
|
161 tests were skipped, 63 by the test itself.
|
...
|
This seems a bit similar to MDEV-27955, MDEV-28714 and MDEV-24909 but none of them had this failure that it prints out the whole output, so filing this as a new bug.
I am aware that MariaDB Foundation might not care about s390x architecture, but often this kind of bugs reveal deeper problems, so it might be good to take a look. As an example the failure originally on armhf that lead to https://github.com/MariaDB/server/pull/2448 was at first just one architecture issue, but later revealed that the time code in question had not been updated in 10+ years and needed to be modernized for the sake of all architectures.
Attachments
Issue Links
- relates to
-
MDEV-24909 JSON functions don't respect KILL QUERY / max_statement_time limit
-
- Closed
-
-
MDEV-27955 main.func_json_notembedded test fails on out-of-memory on MariaDB 10.6.7
-
- Closed
-
-
MDEV-28714 JSON functions still don't respect KILL on centos73-ppc64, main.func_json_notembedded fails
-
- Closed
-